# CudaRayTracer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  CudaRayTracer.sln  CudaRayTracer.vcxproj  CudaRayTracer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  etq  imgui.ini  readme.md
CudaRayTracer.dir/Release/: bvh.cu886464207.deps  camera.cu558210710.deps  light.cu772834073.deps  material.cu1069885716.deps  sampler.cu-1875960145.deps  triangle.cu-2039586983.deps
CudaRayTracer.dir/Release/CudaRayTracer.tlog/: CudaRayTracer.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
Scene/Diffuse/: cornell-box.json
Scene/Gallery/: diffuse-model-showcase.json  ibl-abeautifulgame-petit-port.json  pbr-mitsuba-grid-showcase.json  sss-trio-gems-showcase.json  svgf-paper.json  svgf-showcase.json  teaser_feature_showcase.json  veach-mis-showcase.json
Scene/IBL/: bunny.json  dragon.json
Scene/MIS/: veach-mis.json
Scene/PBR/: cornell-box-gold.json  cornell-box-mirror.json  cornell-box-plastic.json  cornell-box-rusty-iron.json  cornell-box-silver.json
Scene/SSS/: bunny-jade.json  bunny-marble.json  bunny-milk.json  bunny-skin.json  bunny.json  cornell-box.json  dragon.json
Scene/Texture/: table.json
Shader/: gbuffer.fs  gbuffer.vs
Src/: main.cu
Src/Core/: bounds.h  bvh.cu  bvh.h  camera.cu  camera.h  global.h  integrator.h  light.cu  light.h  lightmanager.cu  lightmanager.h  material.cu  material.h  ray.h  renderer.cuh  sampler.cu  sampler.h  scene.cpp  scene.h  texture.cu  texture.h  triangle.cu  triangle.h
Src/Utils/: mathutil.cu  mathutil.h  objloader.cpp  objloader.h  shader.cpp  shader.h  stringutil.cpp  stringutil.h  test.h  ui.cpp  ui.h
x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
